# intro_to_bioinf_and_comp_gen_2026

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-sequences.ipynb  02-alignment.ipynb  03-protein_dynamics.ipynb  09-transcription-factors.ipynb  10-3d-genome.ipynb  11-3d-genome-pt2.ipynb  exercise1.fasta
notebooks-solutions/: 01-sequences.ipynb  02-alignment.ipynb  09-transcription-factors-solutions.ipynb  10-3d-genome-solutions.ipynb
projects/: Assignment3.md
