[project]
name = "bioinformatics-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.86",
    "biotite>=1.6.0",
    "cooler>=0.10.4",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mdtraj>=1.11.1.post1",
    "mordredcommunity>=2.0.7",
    "numpy>=2.4.2",
    "openmm>=8.4.0.post2",
    "pandas>=3.0.1",
    "py3dmol>=2.5.4",
    "pyranges>=0.1.4",
    "rdkit>=2025.9.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "umap-learn",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
umap-learn = { git = "https://github.com/lmcinnes/umap.git" }
